--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "aws-amplify": "^4.3.12",
+    "axios": "^0.25.0",
     "mini-css-extract-plugin": "^2.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
